--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
+  background-color: rgb(131, 67, 67);
 }
 
 hr {
@@ -8,46 +9,66 @@ hr {
 }
 
 #errors {
-  color: red;
+  color: rgb(250, 2, 2);
 }
 
 #board {
-margin: 0 auto;
   width: 450px;
   height: 450px;
-  background-color: yellow;
+
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
 }
 
 .tile {
-  width: 40px;
-  height: 40px;
-  border: 1px solid gray;
-  box-sizing: border-box;
+  width: 48px; 
+  height: 48px;
+  border: 1px solid lightgray;
+
+  /* Text */
   font-size: 20px;
-  display: flex;
   font-weight: bold;
-  align-items: center;
+  display: flex;
   justify-content: center;
+  align-items: center;
 }
+
 #digits {
-  margin: 0 auto;
   width: 450px;
   height: 50px;
-  background-color: yellow;
+
+  margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
 }
 
 .number {
-  width: 40px;
-  height: 40px;
+  width: 44px; 
+  height: 44px;
   border: 1px solid black;
-  box-sizing: border-box;
+  margin: 2px;
+
+  /* Text */
   font-size: 20px;
-  display: flex;
   font-weight: bold;
-  align-items: center;
+  display: flex;
   justify-content: center;
+  align-items: center;
+}
+
+.number-selected {
+  background-color: gray;
+}
+
+.tile-start {
+  background-color: whitesmoke;
+}
+
+.horizontal-line {
+  border-bottom: 1px solid black;
+}
+
+.vertical-line {
+  border-right: 1px solid black;
 }
